# fuzzyfinder

./: .gitignore  .readthedocs.yml  .travis.yml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.rst  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: ci.yml  publish.yml
docs/: Makefile  conf.py  fuzzyfinder.rst  index.rst  installation.rst  make.bat  modules.rst  usage.rst
fuzzyfinder/: __init__.py  main.py
tests/: test_fuzzyfinder.py
