[project]
name = "fuzzyfinder"
dynamic = ["version"]
description = "Fuzzy Finder implemented in Python."
readme = "README.rst"
requires-python = ">=3.10"
license = { text = "BSD" }
authors = [{ name = "Amjith Ramanujam", email = "amjith.r@gmail.com" }]
urls = { "homepage" = "https://github.com/amjith/fuzzyfinder" }

[project.optional-dependencies]
dev = [
    "coverage>=7.2.7",
    "pytest>=7.4.4",
    "pytest-cov>=4.1.0",
    "pdbpp>=0.10.3",
    "ruff>=0.11.1",
    "sphinx>=8.1.3",
    "sphinx-rtd-theme>=3.0.2",
    "mypy>=1.15.0",
]

[build-system]
requires = [
    "setuptools>=64.0",
    "setuptools-scm>=8;python_version>='3.8'",
    "setuptools-scm<8;python_version<'3.8'",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.setuptools.packages.find]
exclude = ["screenshots"]

[tool.ruff]
line-length = 140
exclude = ["docs"]

[tool.mypy]
python_version = "3.8"
files = "fuzzyfinder"
disallow_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
warn_unused_configs = true
warn_unreachable = true
pretty = true
